@@ -2140,4 +2140,9 @@ Finds a small $e$ such that the rank of $G_e$ is equal to the rank of $G$
 step to speed up LLL reductions, see \tet{nf_get_Gtwist}.
 Suitable for \kbd{gerepileupto}, but does not collect garbage.
 
+\section{Central simple algebras}
+
+\fun{void}{checkal}{GEN a} raise an exception if $a$ was not initialized
+by \tet{alinit}.
+
 \newpage
