@@ -758,6 +758,7 @@ GEN     RgC_Rg_mul(GEN x, GEN y);
 GEN     RgC_RgM_mul(GEN x, GEN y);
 GEN     RgC_RgV_mul(GEN x, GEN y);
 GEN     RgC_add(GEN x, GEN y);
+long    RgC_is_ei(GEN x);
 GEN     RgC_neg(GEN x);
 GEN     RgC_sub(GEN x, GEN y);
 GEN     RgM_Rg_add(GEN x, GEN y);
@@ -942,6 +943,7 @@ GEN     ZC_Z_sub(GEN x, GEN y);
 GEN     ZC_add(GEN x, GEN y);
 GEN     ZC_copy(GEN x);
 GEN     ZC_hnfremdiv(GEN x, GEN y, GEN *Q);
+long    ZC_is_ei(GEN x);
 GEN     ZC_lincomb(GEN u, GEN v, GEN X, GEN Y);
 void    ZC_lincomb1_inplace(GEN X, GEN Y, GEN v);
 GEN     ZC_neg(GEN M);
@@ -950,6 +952,7 @@ GEN     ZC_reducemodmatrix(GEN v, GEN y);
 GEN     ZC_sub(GEN x, GEN y);
 GEN     ZC_z_mul(GEN X, long c);
 GEN     ZM_ZC_mul(GEN x, GEN y);
+GEN     ZM_Z_div(GEN X, GEN c);
 GEN     ZM_Z_divexact(GEN X, GEN c);
 GEN     ZM_Z_mul(GEN X, GEN c);
 GEN     ZM_add(GEN x, GEN y);
@@ -1153,6 +1156,7 @@ GEN altracematrix(GEN al);
 GEN bnfgwgeneric(GEN bnf, GEN Lpr, GEN Ld, GEN pl, long var);
 GEN bnrconj(GEN bnr, long i);
 GEN bnrgwsearch(GEN bnr, GEN Lpr, GEN Ld, GEN pl);
+void checkal(GEN x);
 void checkhasse(GEN nf, GEN hi, GEN hf, long n);
 long cyclicrelfrob(GEN rnf, GEN nf2, GEN auts, GEN pr);
 long cyclicrelfrob0(GEN nf, GEN aut, GEN pr, GEN q, long f, long g);
