@@ -212,6 +212,7 @@ AP 81- [GP] central simple algebra package, GP functions
     algetord           alquotient         algetabsdim        algetsplitting
     alradical
    82- [libpari] functions rnf_get_alpha, rnf_get_idealdisc, rnf_get_k
+   83- [libpari] functions ZC_is_ei, RgC_is_ei, ZM_Z_div, checkal
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
